Working on webshell window event handlers

--- a/docs/TODO
+++ b/docs/TODO
@@ -9,9 +9,8 @@ widget/Child, child window kChildIID
 
 Sync more of m5 in.
 
-On Linux:
-gfx/xlib depends on widget/xlib
-but on Windows:
-widget/xlib depends on gfx/xlib
+modules/plugin needs a lot of work (probably out of scope)
 
-modules/plugin needs a lot of work
+nsIContentViewer (webshell)
+
+
